tests/sksl/errors/ReservedNameSubpassInput.glsl
### Compilation failed:

error: 1: name 'isubpassInput' is reserved
int isubpassInput;
    ^^^^^^^^^^^^^
error: 2: name 'isubpassInputMS' is reserved
int isubpassInputMS;
    ^^^^^^^^^^^^^^^
error: 3: name 'usubpassInput' is reserved
int usubpassInput;
    ^^^^^^^^^^^^^
error: 4: name 'usubpassInputMS' is reserved
int usubpassInputMS;
    ^^^^^^^^^^^^^^^
4 errors
